--- a/index.ipynb
+++ b/index.ipynb
@@ -37,8 +37,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "y = []\n",
-    "x =None\n",
+    "y = [40, 30, 10, 50, 25, 5]\n",
+    "x = [\"Crim\"]\n",
     "labels = None\n",
     "\n",
     "# Set a figure size\n",
