--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "y = [40, 30, 10, 50, 25, 5]\n",
-    "x = [\"Crim\"]\n",
+    "x = [\"Crime/Mystery\", \"Science Fiction\", \"\"]\n",
     "labels = None\n",
     "\n",
     "# Set a figure size\n",
