--- a/index.ipynb
+++ b/index.ipynb
@@ -38,8 +38,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "y = [40, 30, 10, 50, 25, 5]\n",
-    "x = [\"Crime/Mystery\", \"Science Fiction\", \"Drama\", \"Comedy\", \"Action\", \"Documentary\"]\n",
-    "labels = None\n",
+    "x = ran\n",
+    "labels = [\"Crime/Mystery\", \"Science Fiction\", \"Drama\", \"Comedy\", \"Action\", \"Documentary\"]\n",
     "\n",
     "# Set a figure size\n",
     "plt.f\n",
