Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,11 +38,11 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "y = [40, 30, 10, 50, 25, 5]\n",
-    "x = ran\n",
+    "x = range(len(y))\n",
     "labels = [\"Crime/Mystery\", \"Science Fiction\", \"Drama\", \"Comedy\", \"Action\", \"Documentary\"]\n",
     "\n",
     "# Set a figure size\n",
-    "plt.f\n",
+    "plt.figsize(())\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
     "\n",
