Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,9 +42,10 @@
     "labels = [\"Crime/Mystery\", \"Science Fiction\", \"Drama\", \"Comedy\", \"Action\", \"Documentary\"]\n",
     "\n",
     "# Set a figure size\n",
-    "plt.figsize(())\n",
+    "plt.figsize((8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
+    "plt.bar()\n",
     "\n",
     "# Give a title to the bar graph\n",
     "\n",
