--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
     "plt.figsize((8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
-    "plt.bar()\n",
+    "plt.bar(x, y, data)\n",
     "\n",
     "# Give a title to the bar graph\n",
     "\n",
