--- a/index.ipynb
+++ b/index.ipynb
@@ -45,9 +45,10 @@
     "plt.figsize((8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
-    "plt.bar(x, y, data)\n",
+    "plt.bar(x, y, data=labels)\n",
     "\n",
     "# Give a title to the bar graph\n",
+    "plt.title(\"J\")\n",
     "\n",
     "# Output the final plot\n"
    ]
