--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
     "labels = [\"Crime/Mystery\", \"Science Fiction\", \"Drama\", \"Comedy\", \"Action\", \"Documentary\"]\n",
     "\n",
     "# Set a figure size\n",
-    "plt.figsize((8,6))\n",
+    "plt.figure(figsize=((8,6))\n",
     "\n",
     "# Plot vertical bars of fixed width by passing x and y values to .bar() function \n",
     "plt.bar(x, y, data=labels)\n",
