--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "y = [40, 30, 10, 50, 25, 5]\n",
-    "x = range(len(y))\n",
+    "x = range(2*len(y))\n",
     "labels = [\"Crime/Mystery\", \"Science Fiction\", \"Drama\", \"Comedy\", \"Action\", \"Documentary\"]\n",
     "\n",
     "# Set a figure size\n",
