--- a/index.ipynb
+++ b/index.ipynb
@@ -115,8 +115,10 @@
     "mpg = [29, 23, 33, 28, 20, 21, 14, 25, 31, 17]\n",
     "\n",
     "# Set the figure size in inches\n",
+    "plt.figure(figsize=(8,6))\n",
     "\n",
     "# Plot with scatter()\n",
+    "\n",
     "\n",
     "# Set x and y axes labels and give titles\n"
    ]
