Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,9 +118,10 @@
     "plt.figure(figsize=(8,6))\n",
     "\n",
     "# Plot with scatter()\n",
+    "plt.scatter(weight, mpg)\n",
     "\n",
-    "\n",
-    "# Set x and y axes labels and give titles\n"
+    "# Set x and y axes labels and give titles\n",
+    "p\n"
    ]
   },
   {
