--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,8 @@
     "plt.scatter(weight, mpg)\n",
     "\n",
     "# Set x and y axes labels and give titles\n",
-    "p\n"
+    "plt.xlabel(\"Weight\")\n",
+    "plt\n"
    ]
   },
   {
