Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,8 @@
     "\n",
     "# Set x and y axes labels and give titles\n",
     "plt.xlabel(\"Weight\")\n",
-    "plt\n"
+    "plt.ylabel(\"MPG\")\n",
+    "p\n"
    ]
   },
   {
