Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,8 @@
     "# Set x and y axes labels and give titles\n",
     "plt.xlabel(\"Weight\")\n",
     "plt.ylabel(\"MPG\")\n",
-    "p\n"
+    "plt.title(\"Consumer Cars\")\n",
+    "plt.\n"
    ]
   },
   {
