Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,8 @@
     "#Plot the distogram with hist() function\n",
     "plt.hist(x)\n",
     "# Label, give title and show the plot\n",
-    "plt.\n"
+    "plt.xlabel(\"Waiting time\")\n",
+    "plt.ylabel(\"\")\n"
    ]
   },
   {
