Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,8 @@
     "plt.hist(x)\n",
     "# Label, give title and show the plot\n",
     "plt.xlabel(\"Waiting time\")\n",
-    "plt.ylabel(\"\")\n"
+    "plt.ylabel(\"Number of customers\")\n",
+    "plt.title(\"Custom\")\n"
    ]
   },
   {
